<package format="2">
  <name>vision_walking_controller</name>
  <version>0.1.0</version>
  <description>
    Modification of Masaki Murooka's humanoid walking controller with various baseline methods
  </description>
  <maintainer email="maintainer@example.org">maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_collection</depend>
  <depend>force_control_collection</depend>
  <depend>centroidal_control_collection</depend>

  <build_depend>eigen</build_depend>

  <exec_depend>rviz</exec_depend>
  <exec_depend>rospy</exec_depend>

  <doc_depend>doxygen</doc_depend>
</package>
